merge from modules18.1 (56841)